--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<li><a href="#">Philosophy</a></li>
 								<li><a href="#">Literature</a></li>
 								<li><a href="#">Politics</a></li>
-								<li><a href="#">Adip</a>Literature</li>
+								<li><a href="#">Blog</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
